--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,11 +19,11 @@
   <div class="field">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <%= recaptcha_tags %>
   </div>
-  <%= recaptcha_tags %>
+  
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Sign up" , :class => "btn"%>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
